<resources>
    <string name="app_name">Car automatic management v2</string>

    <string name="txtDrlDelay">DRL delay</string>
    <string name="txtInterDelay">Interior delay</string>
    <string name="txtAmpDelay">AMP delay</string>
    <string name="txtDvrDelay">DVR delay</string>

    <string name="btnDRLAutoState">DRL Def</string>
    <string name="btnINTERAutoState">INTER Def</string>
    <string name="btnAMPAutoState">AMP Def</string>
    <string name="btnDVRAutoState">DVR Def</string>

    <string name="btnSave">SAVE</string>

    <string name="tglOn">AUTO</string>
    <string name="tglOff">MANUAL</string>

    <string name="title">SETTINGS</string>

    <string name="from">FROM H</string>
    <string name="to">TO H</string>
    <string name="fromToLabel">SET DAYTIME HOURS</string>
    <string name="title_activity_widget">widget</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>